apps/maintainerr/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: maintainerr
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: maintainerr
      app.kubernetes.io/name: maintainerr
  serviceName: maintainerr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: maintainerr
        app.kubernetes.io/name: maintainerr
    spec:
      containers:
        - name: maintainerr
          image: maintainerr
          livenessProbe:
            httpGet:
              path: /api/health/live
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 6246
          readinessProbe:
            httpGet:
              path: /api/health/ready
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 360
            httpGet:
              path: /api/health/ready
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /opt/data
          resources:
            requests:
              cpu: 25m
              memory: 250Mi
      securityContext:
        fsGroup: 1000
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
