apps/maintainerr/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 6246
      targetPort: http
  selector:
    app.kubernetes.io/instance: maintainerr
    app.kubernetes.io/name: maintainerr
