apps/maintainerr/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr
spec:
  rules:
    - backendRefs:
        - name: maintainerr
          port: 6246
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr-api
spec:
  rules:
    - matches:
        - headers:
            - name: X-Api-Key
              type: RegularExpression
              value: .+
      backendRefs:
        - name: maintainerr
          port: 6246
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr-health
spec:
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/health
      backendRefs:
        - name: maintainerr
          port: 6246
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr-redirect
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
